# ALPR

./: .gitignore  main.py  pyproject.toml
notebooks/: 01_environment.ipynb  02_dataset_exploration.ipynb  03_train_yolo.ipynb  04_inference.ipynb  05_ocr.ipynb  06_evaluation.ipynb
