[project]
name = "porto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "numpy>=2.5.0",
    "opencv-python>=4.13.0.92",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.3.1",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "tqdm>=4.68.3",
    "ultralytics>=8.4.79",
]
